compiler/testData/diagnostics/tests/thisAndSuper/superInExtensionFunction.fir.kt
fun String.f() {
    <!NO_SUPERTYPE, NO_SUPERTYPE!>super@f<!>.<!UNRESOLVED_REFERENCE!>compareTo<!>("")
    <!NO_SUPERTYPE, NO_SUPERTYPE!>super<!>.<!UNRESOLVED_REFERENCE!>compareTo<!>("")
}